# vampire-proof-check

./: README.md  plan.org  stack.yaml  vampire-proof-check.cabal  vampire-proof-checker.cabal  vampire-tools.cabal
app/: Main.hs  ProgressReporter.hs
app/VampireProofCheck/: Options.hs
app/VampireProofChecker/: Options.hs
app/benchmark/: Main.hs
app/proof-check/: Main.hs
examples/: duplicate.txt  easy.txt  unexpected.txt
examples/parse_error/: circular.txt  missing.txt  unexpected.txt
src/: Main.hs
src/Data/: DependencyGraph.hs  Range.hs
src/System/Console/: ProgressReporter.hs
src/Vampire/Benchmark/: Main.hs  Options.hs
src/VampireProofCheck/: List.hs  Main.hs  Options.hs  Parser.hs  Types.hs  Vampire.hs
src/VampireProofChecker/: List.hs  Parser.hs  Types.hs  Vampire.hs
test/Data/: DependencyGraphSpec.hs
