cabal-version:      2.2
name:               vampire-proof-check
version:            0.1.0.0
synopsis:           A simple tool to check proofs with the vampire theorem prover
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
category:           Logic
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

library
  import:           warnings
  exposed-modules:  Data.Range
                  , VampireProofCheck.Parser
                  , VampireProofCheck.Types
                  , VampireProofCheck.Vampire
  other-modules:    VampireProofCheck.List
  build-depends:    base >=4.11 && <5
                  , clock
                  , containers
                  , deepseq
                  , megaparsec
                  , mtl
                  , parser-combinators
                  , process
                  , safe
                  , text
                  , time
  hs-source-dirs:   src
  default-language: Haskell2010

executable vampire-proof-check
  import:           warnings
  other-modules:    VampireProofCheck.Options
  build-depends:    base >=4.11 && <5
                  , vampire-proof-check
                  , containers
                  , directory
                  , filepath
                  , mtl
                  , optparse-applicative
                  , safe
                  , text
                  , time
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
