cabal-version:      2.2
name:               vampire-proof-check
version:            0.1.0.0
synopsis:           A simple tool to check proofs with the vampire theorem prover
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
category:           Logic
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

library
  import:           warnings
  exposed-modules:  Data.DependencyGraph
                  , Data.Range
                  , VampireProofCheck.Parser
                  , VampireProofCheck.Types
                  , VampireProofCheck.Vampire
                  , System.Console.ProgressReporter
  other-modules:    VampireProofCheck.List
  build-depends:    base >=4.11 && <5
                  , ansi-terminal
                  , async
                  , clock
                  , containers
                  , deepseq
                  , megaparsec
                  , mtl
                  , parser-combinators
                  , process
                  , recursion-schemes
                  , safe
                  , text
                  , time
                  , stm
  hs-source-dirs:   src
  default-language: Haskell2010

executable vampire-proof-check
  import:           warnings
  other-modules:    VampireProofCheck.Options
  build-depends:    base >=4.11 && <5
                  , vampire-proof-check
                  , ansi-terminal
                  , async
                  , containers
                  , directory
                  , exceptions
                  , filepath
                  , mtl
                  , optparse-applicative
                  , safe
                  , text
                  , time
                  , stm
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite vampire-proof-check-tests
  import:           warnings
  other-modules:    Data.DependencyGraphSpec
  build-depends:    base
                  , vampire-proof-check
                  , async
                  , containers
                  , deepseq
                  , deriving-compat
                  , hspec
                  , hspec-discover
                  , recursion-schemes
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  default-language: Haskell2010
