cabal-version:      2.2
name:               vampire-proof-checker
version:            0.1.0.0
synopsis:           A simple tool to check proofs with the vampire theorem prover
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
category:           Logic
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

library
  import:           warnings
  exposed-modules:  VampireProofChecker.Parser
                  , VampireProofChecker.Types
                  , VampireProofChecker.Vampire
  other-modules:    VampireProofChecker.List
  build-depends:    base >=4.11 && <4.12
                  , containers
                  , megaparsec
                  , parser-combinators
                  -- , prettyprinter
                  -- , QuickCheck
                  , process
                  , text
  hs-source-dirs:   src
  default-language: Haskell2010

executable vampire-proof-check
  import:           warnings
  other-modules:    VampireProofChecker.Options
  build-depends:    base >=4.11 && <4.12
                  , vampire-proof-checker
                  , containers
                  , filepath
                  , mtl
                  , optparse-applicative
                  , text
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
