cabal-version:      2.2
name:               vampire-tools
version:            0.1.0.0
synopsis:           Check proofs with the vampire theorem prover, and benchmark vampire runs
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Rath
maintainer:         git@jakobrath.eu
category:           Logic
build-type:         Simple
extra-source-files: README.md

common warnings
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances

library
  import:           warnings
  exposed-modules:  Data.DependencyGraph
                  , Data.Range
                  , System.Console.ProgressReporter
                  , VampireProofCheck.Main
                  , VampireProofCheck.Options
                  , VampireProofCheck.Parser
                  , VampireProofCheck.Types
                  , VampireProofCheck.Vampire
  other-modules:    VampireProofCheck.List
  build-depends:    base >=4.11 && <5
                  , ansi-terminal
                  , async
                  , clock
                  , containers
                  , deepseq
                  , deriving-compat
                  , directory
                  , exceptions
                  , filepath
                  , megaparsec
                  , mtl
                  , optparse-applicative
                  , parser-combinators
                  , process
                  , recursion-schemes
                  , safe
                  , stm
                  , text
                  , time
                  , unix
  hs-source-dirs:   src
  default-language: Haskell2010

executable vampire-proof-check
  import:           warnings
  build-depends:    base
                  , vampire-tools
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app/proof-check
  default-language: Haskell2010

executable vampire-benchmark
  import:           warnings
  build-depends:    base
                  , vampire-tools
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   app/benchmark
  default-language: Haskell2010

test-suite vampire-tools-tests
  import:           warnings
  other-modules:    Data.DependencyGraphSpec
  build-depends:    base
                  , vampire-tools
                  , async
                  , containers
                  , deepseq
                  , deriving-compat
                  , hspec
                  , hspec-discover
                  , recursion-schemes
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  default-language: Haskell2010
